--- a/40349-h/40349-h.htm
+++ b/40349-h/40349-h.htm
@@ -1161,7 +1161,7 @@ such ardent admiration. Under such circumstances a husband's feelings
 must be worth dissection.'</p>
 
 <p class="normal">In reply to Mr Holland's modest knock, the door of Miss Bewicke's
-apartments was opened by a young gentleman well ever six feet high,
+apartments was opened by a young gentleman well over six feet high,
 who appeared to be in rather a curious frame of mind.</p>
 
 <p class="normal">'What the deuce do you want?' was his courteous salutation.</p>
@@ -2039,7 +2039,7 @@ Casata. When he had finished she drew a long breath.</p>
 <p class="normal">'Letty!'</p>
 
 <p class="normal">'I should, I really should. So long as you get the ruby, no matter
-what happens, you can't be worse off that you will be if you don't get
+what happens, you can't be worse off than you will be if you don't get
 it. If you don't get it, you are ruined. You will have to go back to
 Africa and stay there for the rest of your life, or, at anyrate, till
 both of us are old; because you know you've no more chance of getting
@@ -2211,7 +2211,7 @@ kind.</p>
 <p class="normal">'Good-night, sir.'</p>
 
 <p class="normal">He seemed rather a youngish man, well set up, with broad shoulders and
-a shrewd face. Mr Holland wondered if he should, have any professional
+a shrewd face. Mr Holland wondered if he should have any professional
 intercourse with him before the night was over. He laughed to himself
 as he thought of it. When he had gone some distance further he stopped
 and turned. The constable had vanished. Presumably his duty had led
@@ -2227,7 +2227,7 @@ playing with him after all.</p>
 <p class="normal">At the idea he laughed again. What would Miss Broad say--and think--if
 the woman had promised more than she could perform? He went nearly as
 far as Victoria, then retraced his steps. As he approached the house
-again Big Ben struck one; He stopped, threw away the butt of his
+again Big Ben struck one. He stopped, threw away the butt of his
 cigar, moved to the door. There was a handle. He turned it, it
 yielded, the door was open.</p>
 
@@ -3123,7 +3123,7 @@ give it him back again that he got his back up.'</p>
 
 <p class="normal">'It was the bloke you pointed out to me this afternoon--that I do
 know. Here, I borrowed these things from off him--took them out of his
-pockets.' He produced a miscellaneous collection. Here's a cigar-case
+pockets.' He produced a miscellaneous collection. 'Here's a cigar-case
 with initials on it, &quot;G. H.,&quot; and cards inside with a name on them,
 &quot;Mr Guy Holland.&quot; I should think that that ought to be about good
 enough.'</p>
@@ -4467,7 +4467,7 @@ lip.</p>
 
 <p class="normal">'Servants, perhaps.'</p>
 
-<p class="normal">'The suggestion was the Flyman's.'</p>
+<p class="normal">The suggestion was the Flyman's.</p>
 
 <p class="normal">'Then confound the servants! Why can't they take a little extra time
 to-night? They know their mistress is away.'</p>
@@ -5911,7 +5911,7 @@ hers.'</p>
 
 <p class="normal">Comment from Mr Burton,--</p>
 
-<p class="normal">How sad! That's very wrong of her. Shows such deplorable
+<p class="normal">'How sad! That's very wrong of her. Shows such deplorable
 moral blindness, doesn't it? She is a wicked woman, is May
 Bewicke--heartless, hypocritical, selfish to the core. Well, Collyer,
 anyhow that settles it. The money's mine, and I give you my personal
